...
                },
                transitionDuration: const Duration(milliseconds: 500),
              ),
            );
          },
          backgroundColor: Colors.blue,
          key: ValueKey('addUserEvent'),
          child: const Icon(
            Icons.add,
            color: Colors.white,
          ),
        ),
      ),
...
